--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,14 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.0.0"
+version = "1.9.1"
 name = "wipac-dev-tools"
 description = "Common, basic, and reusable development tools"
 readme = "README.md"
 keywords = ["WIPAC", "python", "tools", "utilities"]
 classifiers = ["Development Status :: 5 - Production/Stable", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
 requires-python = ">=3.8, <3.13"
+dependencies = ["importlib-metadata"]
 
 [[project.authors]]
 name = "WIPAC Developers"
