--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -122,17 +122,17 @@ jobs:
         with:
           fetch-depth: 0
       # Python-Package Version Bump
-      - uses: python-semantic-release/python-semantic-release@v9.8.0
-        id: release
+      - uses: python-semantic-release/python-semantic-release@v8.7.0
+        id: psr-psr
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       # PyPI Release
       - uses: pypa/gh-action-pypi-publish@release/v1
-        if: steps.release.outputs.released == 'true'
+        if: steps.psr-psr.outputs.released == 'true'
         with:
           password: ${{ secrets.PYPI_TOKEN }}
       # GitHub Release
-      - uses: python-semantic-release/upload-to-gh-release@v9.8.0
-        if: steps.release.outputs.released == 'true'
+      - uses: python-semantic-release/upload-to-gh-release@v8.7.0
+        if: steps.psr-psr.outputs.released == 'true'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
