--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ Source = "https://github.com/WIPACrepo/wipac-dev-tools"
 [tool.semantic_release]
 version_toml = ["pyproject.toml:project.version"]
 commit_parser = "emoji"
+build_command = "pip install poetry && poetry build"
 
 [tool.semantic_release.commit_parser_options]
 major_tags = ["[major]"]
