`dependencies = ["typing_extensions", "requests"]`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 keywords = ["WIPAC", "python", "tools", "utilities"]
 classifiers = ["Development Status :: 5 - Production/Stable", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
 requires-python = ">=3.8, <3.13"
+dependencies = ["typing_extensions", "requests"]
 
 [[project.authors]]
 name = "WIPAC Developers"
