Use `WIPACrepo/wipac-dev-py-setup-action` Followup Fixes (#101)
* Use `WIPACrepo/wipac-dev-py-setup-action` Followup Fixes

* <bot> update dependencies*.log files(s)

* no longer need `importlib_metadata`

* <bot> update dependencies*.log files(s)

* `dependencies = ["typing_extensions", "requests"]`

* <bot> update dependencies*.log files(s)

* <bot> update pyproject.toml

* <bot> add py.typed file(s)

* <bot> add py.typed file(s)

* use `WIPACrepo/wipac-dev-py-versions-action@reqs`

* no longer need `importlib_metadata` - 2

* use `WIPACrepo/wipac-dev-py-versions-action@v2.4`

* use `WIPACrepo/wipac-dev-py-setup-action@v4.0`

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 keywords = ["WIPAC", "python", "tools", "utilities"]
 classifiers = ["Development Status :: 5 - Production/Stable", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
 requires-python = ">=3.8, <3.13"
-dependencies = ["importlib-metadata"]
+dependencies = ["typing_extensions", "requests"]
 
 [[project.authors]]
 name = "WIPAC Developers"
@@ -32,6 +32,7 @@ Source = "https://github.com/WIPACrepo/wipac-dev-tools"
 
 [tool.semantic_release]
 version_toml = ["pyproject.toml:project.version"]
+version_variables = ["wipac_dev_tools/__init__.py:__version__"]
 commit_parser = "emoji"
 build_command = "pip install build && python -m build"
 
