--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,9 @@ email = "developers@icecube.wisc.edu"
 file = "LICENSE"
 
 [project.optional-dependencies]
-coloredlogs = ["coloredlogs"]
 semver = ["semantic-version"]
 dev = ["pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
-mypy = ["coloredlogs", "pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
+mypy = ["pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
 
 [project.urls]
 Homepage = "https://pypi.org/project/wipac-dev-tools/"
