--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ file = "LICENSE"
 
 [project.optional-dependencies]
 semver = ["semantic-version"]
-dev = ["pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
-mypy = ["pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
+dev = ["prometheus-client", "pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
+mypy = ["prometheus-client", "pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
 
 [project.urls]
 Homepage = "https://pypi.org/project/wipac-dev-tools/"
