--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,16 @@ file = "LICENSE"
 
 [project.optional-dependencies]
 semver = ["semantic-version"]
-dev = ["prometheus-client", "pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
+dev = ["prometheus-client", "pytest", "pytest-asyncio", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
 mypy = ["prometheus-client", "pytest", "pytest-flake8", "pytest-mypy", "requests", "semantic-version"]
 
 [project.urls]
 Homepage = "https://pypi.org/project/wipac-dev-tools/"
 Tracker = "https://github.com/WIPACrepo/wipac-dev-tools/issues"
 Source = "https://github.com/WIPACrepo/wipac-dev-tools"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
 
 [tool.semantic_release]
 version_toml = ["pyproject.toml:project.version"]
