use `WIPACrepo/wipac-dev-py-setup-action@v4.5`

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -81,7 +81,7 @@ jobs:
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: WIPACrepo/wipac-dev-py-setup-action@auto_mypy_option
+        uses: WIPACrepo/wipac-dev-py-setup-action@v4.5
         with:
           python_min: 3.9
           pypi_name: wipac-dev-tools
