--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,22 +8,22 @@ name = "wipac-dev-tools"
 description = "Common, basic, and reusable development tools"
 readme = "README.md"
 keywords = [
-  'WIPAC',
-  'python tools',
-  'utilities'
+    'WIPAC',
+    'python tools',
+    'utilities'
 ]
 classifiers = [
-  'Development Status :: 5 - Production/Stable',
-  'Programming Language :: Python :: 3.9',
-  'Programming Language :: Python :: 3.10',
-  'Programming Language :: Python :: 3.11',
-  'Programming Language :: Python :: 3.12',
-  'Programming Language :: Python :: 3.13'
+    'Development Status :: 5 - Production/Stable',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13'
 ]
 requires-python = ">=3.9, <3.14"
 dependencies = [
-  'requests',
-  'typing_extensions'
+    'requests',
+    'typing_extensions'
 ]
 
 [[project.authors]]
@@ -35,25 +35,34 @@ file = "LICENSE"
 
 [project.optional-dependencies]
 semver = [
-  'semantic-version'
+    'semantic-version'
+]
+mongo = [
+    'motor'
+]
+web = [
+    'tornado'
+]
+jsonschema = [
+    'jsonschema'
 ]
 dev = [
-  'prometheus-client',
-  'pytest',
-  'pytest-asyncio',
-  'pytest-flake8',
-  'pytest-mypy',
-  'requests',
-  'semantic-version'
+    'prometheus-client',
+    'pytest',
+    'pytest-asyncio',
+    'pytest-flake8',
+    'pytest-mypy',
+    'requests',
+    'semantic-version'
 ]
 mypy = [
-  'prometheus-client',
-  'pytest',
-  'pytest-asyncio',
-  'pytest-flake8',
-  'pytest-mypy',
-  'requests',
-  'semantic-version'
+    'prometheus-client',
+    'pytest',
+    'pytest-asyncio',
+    'pytest-flake8',
+    'pytest-mypy',
+    'requests',
+    'semantic-version'
 ]
 
 [project.urls]
