--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -13,7 +13,10 @@ jobs:
       - id: versions
         uses: WIPACrepo/wipac-dev-py-versions-action@v2.5
 
-  ######################################################################################
+
+  ############################################################################
+  # LINTERS
+  #############################################################################
 
   flake8:
     needs: [ py-versions ]
@@ -45,7 +48,10 @@ jobs:
           python-version: ${{ matrix.py3 }}
       - uses: WIPACrepo/wipac-dev-mypy-action@v2.0
 
-  ######################################################################################
+
+  ############################################################################
+  # PACKAGING
+  #############################################################################
 
   writable-branch-detect:
     runs-on: ubuntu-latest
@@ -103,7 +109,10 @@ jobs:
         with:
           use_directory: true
 
-  ######################################################################################
+
+  ############################################################################
+  # TESTS
+  #############################################################################
 
   set-special-files:
     runs-on: ubuntu-latest
@@ -161,8 +170,10 @@ jobs:
           else
             pytest -vvvv tests/${{ matrix.file }}
   
-  
-  ######################################################################################
+
+  ############################################################################
+  # RELEASE
+  #############################################################################
 
   release:
     # only run on main/master/default
